--- a/molecular-ast.cabal
+++ b/molecular-ast.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 154a693851ee801986438f2bf5a290b9bfc45bdfc21880399d9c16ffe5f28b62
+-- hash: f427bc9a672192fb020c1faaaaa7760d331b3bdfefdb5fbf8ad058174a7602e1
 
 name:           molecular-ast
 version:        0.1.0.0
@@ -30,6 +30,7 @@ library
       Atoms.Chemistry.Cascades.DeMorgan
       Atoms.Chemistry.Reductions.EliminateIfAndOnlyIf
       Atoms.Chemistry.Reductions.EliminateImplies
+      Atoms.Chemistry.Reductions.RemoveParens
       Atoms.Chemistry.Transformations.DeMorgan
       Atoms.Chemistry.Transformations.DoubleNegation
       Atoms.Chemistry.Utils.FixedPoint
@@ -41,6 +42,7 @@ library
       Atoms.Elements.Name
       Atoms.Elements.Not
       Atoms.Elements.Or
+      Atoms.Elements.Parens
       Atoms.Elements.Type
       Atoms.Elements.TypeBool
       Atoms.Elements.Variable
