--- a/stack.yaml
+++ b/stack.yaml
@@ -50,6 +50,7 @@ extra-deps:
 - random-source-0.3.0.8@sha256:db1897e13adb4748d571a8e71fb0c38911ae66ea2557d4def7c30378a0ae2f69,3879
 - rvar-0.2.0.4@sha256:8ce31c8eb78e9800b57fce23b3a391e9bb46021c901440c37e472c4c887b74f5,2280
 - flexible-defaults-0.0.3@sha256:6a7ab000561e1075003cb1053dfbbb4020ae2b02916776d1479c9c3fc82f5d0d,2508
+- STMonadTrans-0.4.4@sha256:437eec4fdf5f56e9cd4360e08ed7f8f9f5f02ff3f1d634a14dbc71e890035387,1946
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
