--- a/molecular-ast.cabal
+++ b/molecular-ast.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 47c4553a1ad9f2081559d833221efa9c608207d34e5b3506594a3005cf911f13
+-- hash: 8dcf0629f2455a0bf3fc16f201e480f176c757dfc7e22592f563b3f06f10386a
 
 name:           molecular-ast
 version:        0.1.0.0
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Atoms.Chemistry.Cascades.DeMorgan
+      Atoms.Chemistry.Cascades.DoubleNegation
       Atoms.Chemistry.Concentration
       Atoms.Chemistry.Dilution
       Atoms.Chemistry.Extractions.CNF.Flattened
